force-app/main/default/objects/Trigger_Control__mdt/Trigger_Control__mdt.object-meta.xml
<CustomObject>
    <description>Controls enable/disable state for RevenueTrust triggers. Admins can disable triggers without deploying code. ISV best practice per §14.4.</description>
    <label>Trigger Control</label>
    <pluralLabel>Trigger Controls</pluralLabel>
</CustomObject>