force-app/main/default/objects/Trigger_Control__mdt/fields/Is_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Is_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When false, the trigger is completely bypassed. No events published, no processing.</description>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>