force-app/main/default/objects/Trigger_Control__mdt/fields/Trigger_Name__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Name__c</fullName>
    <description>The API name of the trigger this record controls. e.g., OpportunityCommissionTrigger, CommissionEventTrigger</description>
    <label>Trigger Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>